# lumiere

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.pi/todos/: 00ad8d38.md  0488426f.md  104b7caa.md  1089e622.md  292f9e22.md  310f1e17.md  4b9d6819.md  4e1a3a69.md  511861cd.md  65817816.md  6a7f81c2.md  724d9a96.md  7a3075a1.md  7f684bbd.md  8f685f70.md  a03b4005.md  a985f1d4.md  c15203c5.md  ce1cf93a.md  f9e17e43.md
docs/: go_live_runbook.md
src/lumiere/: __init__.py  attribution.py  backtest.py  backtest_cli.py  config.py  engine.py  evidence_cli.py  evidence_matrix.py  execution.py  historical_data.py  ledger.py  live_positions.py  logging_config.py  main.py  models.py  okx_client.py  optimizer_cli.py  paper_gate.py  paper_trading.py  risk.py  risk_audit.py  risk_state.py  strategy.py  strategy_evaluation.py  strategy_factory.py  telegram_bot.py  telegram_ui.py
src/lumiere/strategies/: __init__.py  rsi_mean_reversion.py  volatility_breakout.py
tests/: __init__.py  fakes.py  test_attribution.py  test_backtest.py  test_cli_smoke.py  test_config.py  test_engine.py  test_evidence_cli.py  test_evidence_matrix.py  test_execution_parity.py  test_execution_policy.py  test_fake_exchange_e2e.py  test_historical_data.py  test_ledger.py  test_logging_config.py  test_new_strategies.py  test_okx_client.py  test_okx_client_sanitization.py  test_okx_sdk_version.py  test_optimizer_cli.py  test_paper_gate.py  test_paper_trading.py  test_readiness_auditor.py  test_risk.py  test_risk_audit.py  test_risk_state.py  test_strategy.py  test_strategy_evaluation.py  test_telegram_bot.py
