[project]
name = "lumiere"
version = "0.1.0"
description = "Telegram bot for OKX demo trading automation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiogram>=3.13,<4",
  "pydantic-settings>=2.6,<3",
  "python-okx==0.4.1",
  "structlog>=24.4,<26",
]

[project.scripts]
lumiere-bot = "lumiere.main:run"
lumiere-backtest = "lumiere.backtest_cli:main"
lumiere-evidence = "lumiere.evidence_cli:main"
lumiere-optimize = "lumiere.optimizer_cli:main"
lumiere-risk-audit = "lumiere.risk_audit:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lumiere"
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["lumiere"]

[tool.coverage.report]
show_missing = true
fail_under = 80
include = [
  "src/lumiere/backtest_cli.py",
  "src/lumiere/engine.py",
  "src/lumiere/evidence_cli.py",
  "src/lumiere/okx_client.py",
  "src/lumiere/optimizer_cli.py",
  "src/lumiere/telegram_bot.py",
  "src/lumiere/telegram_ui.py",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
